Fix on the CMakeLists.txt (wrong syntax for set_property)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -301,7 +301,7 @@ if (ENABLE_TESTING)
       COMMAND ${XILINX_HLS} ${CFGOUT_TO_TCL} ${XILINX_TESTLINES} 0 0
       WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/hls_files
     )
-    set_property (TEST ${TCL_TEST_NAME} DISABLED TRUE)
+    set_property (TEST ${TCL_TEST_NAME} PROPERTY DISABLED TRUE)
 
     if (CMAKE_VERSION VERSION_LESS 3.19.0)
       set (TCL_TEST_NAME "\"Xilinx HLS TCL Flow FROM\"")
@@ -313,6 +313,6 @@ if (ENABLE_TESTING)
       COMMAND ${XILINX_HLS} ${CFGOUT_FROM_TCL} ${XILINX_TESTLINES} 0 0
       WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/hls_files
     )
-    set_property (TEST ${TCL_TEST_NAME} DISABLED TRUE)
+    set_property (TEST ${TCL_TEST_NAME} PROPERTY DISABLED TRUE)
   endif ()
 endif ()
