--- a/sources/top_converters/type_strmlen_endian_from_bytes.cpp.in
+++ b/sources/top_converters/type_strmlen_endian_from_bytes.cpp.in
@@ -37,5 +37,10 @@
 #include "top_converters/@TYPE@_@STRMLEN@_@ENDIAN@_from_bytes.hpp"
 
 void @TYPE@_@STRMLEN@_@ENDIAN@_from_bytes(hls::stream<uint8_t> & strm_in, hls::stream<@TYPE@> & strm_out) {
-    CConverterFromBytes<@STRMLEN@, @ENDIAN@>::process(strm_in, strm_out);
+    // clang-foramt off
+#pragma HLS interface @ITF_BLK@ port=return
+#pragma HLS interface @ITF_IN@  port=strm_in
+#pragma HLS interface @ITF_OUT@ port=strm_out
+    // clang-foramt on
+    CConverterFromBytes<@STRMLEN@, @ENDIAN@, @SIGNED@>::process(strm_in, strm_out);
 }
